# autoessay

./: .env.example  .gitignore  ANTI-SLOP.md  ARCHITECTURE.md  CRAFT.md  PIPELINE.md  README.md  program.md  pyproject.toml
config/: providers.yaml
config/styles/: academic.yaml  magazine.yaml  personal-essay.yaml  policy-brief.yaml  technical.yaml
src/autoessay/: __init__.py  cli.py  provider.py
src/autoessay/pipeline/: __init__.py  _utils.py  drafting.py  evaluation.py  outline.py  research.py  revision.py
src/autoessay/style/: __init__.py  profile.py
tests/: conftest.py  test_drafting.py  test_evaluation.py  test_pipeline.py  test_provider.py  test_revision.py  test_styles.py
