[project]
name = "autoessay"
version = "0.1.0"
description = "Autonomous essay and short paper writing pipeline"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
style = [
    "textstat>=0.7.4",             # readability scores
    "rich>=13.0.0",                # TUI for profile wizard
    "markdown>=3.7",               # markdown rendering
]
embeddings = [
    "faiss-cpu>=1.8.0",            # source deduplication
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0", # local embeddings (pulls torch)
]
export = [
    "jinja2>=3.1.0",               # LaTeX templates
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
]
all = [
    "autoessay[style,embeddings,export,dev]",
]

[project.scripts]
autoessay = "autoessay.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
